crates/aranya-policy-lang/tests/data/command_attributes.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 5 column 1:  --> 5:1
  |
5 | }
  | ^---
  |
  = expected fields_block or seal_block
